<resources>
    <string name="app_name">Daftar_Menu</string>
    <string name="Aku_Gay"></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="orewa_food">Orewa Food</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
</resources>